--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 name: Frederick Brofos
-title: Frederick Brofos
-description: Essays by Frederick Brofos
+title: 
+description: Essays on philately by Frederick Brofos
