--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 name: 
 title: Frederick Brofos
-description: Essays on philately by Frederick Brofos
+description: Essays on philately
